이미지슬라이스

--- a/src/assets/scss/_guide.scss
+++ b/src/assets/scss/_guide.scss
@@ -5,7 +5,8 @@
 .source_his_item{margin-bottom:rem(100)}
 .source_his_item:last-of-type{margin-bottom:0}
 .component_title{font-size:24px;color:#000;font-weight:700;border-bottom:2px solid #000;padding-bottom:rem(20);margin-bottom:rem(20)}
-.component_title_sub{font-size:20px;color:#000;}
+.component_title_sub{font-size:20px;color:#000;font-weight:500;}
+.render_wrap{margin-top:20px;}
 .textarea_size{box-sizing:border-box;width:100%;padding:20px;margin-top:rem(40);overflow:hidden;resize:none;}
 .render_wrap{
     
