--- a/src/include/_header.html
+++ b/src/include/_header.html
@@ -3,7 +3,7 @@
         <h1 class="toplogo"><a href="#" class="toplogo_link"><span class="hdtext">의사교통지원 TOOL</span></a></h1>
         <nav class="nav_list_wrap">
             <ul class="nav_list">
-                <li>
+                <li id="one_depth_01">
                     <a href="#" class="nav_oneitem"><span class="nav_oneitem_text">정책 및 제도 분석 서비스</span></a>
                     <div class="nav_twoitem_list_wrap">
                         <ul class="nav_twoitem_list">
@@ -12,7 +12,7 @@
                         </ul>
                     </div>
                 </li>
-                <li>
+                <li id="one_depth_02">
                     <a href="#" class="nav_oneitem"><span class="nav_oneitem_text">교통현황 모니터링</span></a>
                     <div class="nav_twoitem_list_wrap">
                         <ul class="nav_twoitem_list">
@@ -21,7 +21,7 @@
                         </ul>
                     </div>
                 </li>
-                <li>
+                <li id="one_depth_03">
                     <a href="#" class="nav_oneitem"><span class="nav_oneitem_text">혼재기 교통상황 예측</span></a>
                     <div class="nav_twoitem_list_wrap">
                         <ul class="nav_twoitem_list">
