--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -25,14 +25,19 @@ html:not(.touchmode) {
 .page_wrap{}
 
 
-.header_wrap{flex:0 0 70px;background:#fff;height:70px;overflow:hidden;display:flex;padding:0 30px;position:relative;z-index:20;}
-.hgroup_main_cols{flex:1;min-width:0;display:flex;}
+.header_wrap{flex:0 0 70px;background:#fff;height:70px;display:flex;padding:0 30px;position:relative;z-index:20;
+    &.ready{
+        .nav_twoitem_list_wrap{display:none;opacity:1;height:0; }
+    }
+}
+.hgroup_main_cols{flex:1;min-width:0;display:flex;position:relative;z-index:5;}
 .toplogo{display:flex;align-items: center;}
 .toplogo_link{display:inline-block;width:190px;height:20px;background:url("../images/logo_default.png") no-repeat 0 0;}
 .nav_list_wrap{margin-left:100px;}
 .nav_list{
     display:flex;height:100%;
     > li{
+        position:relative;
         &:last-of-type{}
         &.active{
             .nav_oneitem{
@@ -44,18 +49,23 @@ html:not(.touchmode) {
 }
 
 .nav_oneitem{
-    display:flex;height:100%;align-items: center;box-sizing: border-box;padding:25px 30px;position:relative;
+    display:flex;height:100%;align-items: center;box-sizing: border-box;padding:25px 30px;position:relative;white-space:nowrap;
     &:after{display:block;content:'';position:absolute;bottom:0;height:3px;background:#7b54ff;left:0;width:100%;transition:.4s;opacity:0;}
 }
 .nav_oneitem_text{ font-size: 16px; display:inline-block; color:#313444; font-weight: 400;}
-.nav_twoitem_list_wrap{display:none;}
+.nav_twoitem_list_wrap{background:#fff;position:absolute;top:100%;left:0;width:100%;text-align: center;transition:.4s;opacity:0; overflow:hidden;border-top:1px solid #ddd;
+    &.active{display:block !important;}
+}
 .nav_twoitem_list{
+    padding:18px 0;
     > li{
         &:last-of-type{}
     }
 }
-.nav_twoitem{}
-.bg_twonav{position:absolute;top:100%;left:0;background:#fff;width:100%;}
+.nav_twoitem{color: #5f637a;font-size: 14px;display:block;padding:10px;
+    &:hover{color:#313444;font-weight:600;}
+}
+.bg_twonav{position:absolute;top:100%;left:0;background:#fff;width:100%;height:0;transition:.4s;border-top:1px solid #ddd;}
 
 
 .hgroup_sub_cols{display:flex;align-items: center;}
