--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -68,7 +68,7 @@ html:not(.touchmode) {
 .bg_twonav{position:absolute;top:100%;left:0;background:#fff;width:100%;height:0;transition:.4s;border-top:1px solid #ddd;}
 
 
-.hgroup_sub_cols{display:flex;align-items: center;}
+.hgroup_sub_cols{display:flex;align-items: center;position:relative;z-index:5;}
 .hgroup_util_list{
     display:flex;align-items:center;line-height:0;
     > li{
@@ -76,8 +76,45 @@ html:not(.touchmode) {
         &:last-of-type{margin-right:0}
     }
 }
-.hgroup_util_item{display:inline-block;border-radius: 4px;background-color: #f5f5f5;white-space: nowrap;height:24px;line-height:24px;padding:0 10px;font-size:14px;color:#5f637a;}
+.hgroup_util_item_wrap{position:relative;display:inline-block;
+    &:hover{
+        .hgroup_util_item{
+            background:#7b54ff; color:#fff;
+            &:after{background-position:0 100%;}
+        }
+        .hgroup_util_menu_list_wrap{display:block;}
+    }
+}
+.hgroup_util_item{display:inline-block;position:relative;border-radius: 4px;background-color: #f5f5f5;white-space: nowrap;height:24px;line-height:24px;padding:0 23px 0 10px;font-size:14px;color:#5f637a;
+    &:after{display:block;content:'';width:10px;height:10px;background:url("../images/ico_combo.png") no-repeat 0 0/100% auto;position:absolute;top:50%;right:10px;transform: translateY(-50%);}
+    
+}
 .util_ico_menu{display:inline-block;width:24px;height:24px;background:url("../images/ic_logout_off@2x.png") no-repeat 0 0/100% auto;}
+.hgroup_util_menu_list_wrap{
+    display:none; position:absolute;top:100%;left:50%;transform:translateX(-50%);
+    box-sizing: border-box;
+    &.active{
+        .hgroup_util_item{}
+    }
+}
+.hgroup_util_menu_list{
+    border-radius: 4px; position:relative;top:4px;padding:6px 0;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    > li{
+        &:last-of-type{}
+    }
+}
+.hgroup_util_menu{display:flex;padding:7px 10px;align-items:center;gap:8px;
+    &:hover,
+    &:focus{background:#f7f5ff;color:#313444;}
+}
+.hgroup_util_ico{
+    display:block;flex:0 0 16px;width:16px;height:16px;background-position:0 0;background-repeat:no-repeat;background-size:100% auto;
+    &.ico_edit{background-image:url("../images/ic_user_edit.png");}
+    &.ico_manage{background-image:url("../images/ic_user_set.png");}
+}
+.hgroup_util_text{font-size:13px;color:#5f637a;line-height:1;white-space: nowrap;}
 
 .footer_wrap{}
 
