--- a/src/include/_header_admin.html
+++ b/src/include/_header_admin.html
@@ -38,30 +38,7 @@
    <div class="hgroup_sub_cols">
         <ul class="hgroup_util_list">
             <li>
-                <div class="hgroup_util_item_wrap">
-                    <a href="#" class="hgroup_util_item">user type</a>
-                </div>
-            </li>
-            <li>
-                <div class="hgroup_util_item_wrap">
-                    <a href="#" class="hgroup_util_item">admin</a>
-                    <div class="hgroup_util_menu_list_wrap">
-                        <ul class="hgroup_util_menu_list">
-                            <li>
-                                <a href="#" class="hgroup_util_menu">
-                                    <i class="hgroup_util_ico ico_edit"></i>
-                                    <span class="hgroup_util_text">정보수정</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="hgroup_util_menu">
-                                    <i class="hgroup_util_ico ico_manage"></i>
-                                    <span class="hgroup_util_text">사용자 관리</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+                <a href="#" class="hgroup_util_item">user</a>
             </li>
             <li><a href="#" class="util_ico_menu"><span class="hdtext">로그아웃</span></a></li>
         </ul>
