--- a/src/assets/scss/_mixin.scss
+++ b/src/assets/scss/_mixin.scss
@@ -1,10 +1,15 @@
 
 @use "sass:math";
 
+$primary : #7b54ff;
+
+
 @function rem($value) {
     $remValue: math.div($value, 16) + rem;	
     @return $remValue;
 }
+
+
 
 
 @mixin fontTransform {
