--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -6,7 +6,7 @@
 @import '_mixin';
 
 @import '_tui-date-picker';
-@import '_tui-time-picker';
+// @import '_tui-time-picker';
 
 
 @import '_webfont';
