--- a/src/assets/scss/_contents.scss
+++ b/src/assets/scss/_contents.scss
@@ -1,6 +1,72 @@
 /* contents */
 
 /* component */
+.combo_item{display:inline-block;position:relative;
+    &.active{
+        .combo_target{
+            background-position:100% 100%;border-radius:4px 4px 0 0;border-bottom-color:transparent;box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2); color:$primary;
+            &:after{
+                background-position:0 100%;
+            }
+        }
+        &.reverse_item{
+            .combo_target{border:1px solid #ccc;border-top-color:transparent;border-radius:0 0 4px 4px;
+                box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
+            }
+        }
+    }
+    &.reverse_item{
+        .combo_target:after{
+            background-image:url("../images/ic_sort_arrow_b_reverse.png");
+        }
+    }
+}
+.combo_target{
+    font-size:12px;box-sizing:border-box;color:#5f637a;padding:0 24px 0 10px;border:1px solid #ccc;border-radius:4px;display:block;position:relative;white-space: nowrap;
+    box-sizing: border-box;height:30px;color:#5f637a; line-height:30px; min-width: 70px; box-sizing: border-box;
+    background:#fff;
+    &:after{
+        display:block;content:'';background:url("../images/ic_sort_arrow_b.png") no-repeat 0 0/100% auto; width:10px;height:10px;position:absolute;top:50%;right:8px; transform: translateY(-50%);
+    }
+    
+}
+.combo_option_group{
+    display:none;position:relative;overflow:hidden;z-index:20;background: #FFFFFF;width:calc(100% - 2px);border: 1px solid #ccc;border-top:0;border-radius:0 0 4px 4px;box-sizing: border-box; position:absolute;top:calc(100% + 5px);left:0;
+    &.active{display:block;
+        box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+        &.reverse_pos{box-shadow: 0 -1px 2px 0 rgba(0, 0, 0, 0.2);}
+    }
+    &.reverse_pos{
+        transform: translateY(-100%);
+        border: 1px solid #ccc;border-bottom:0;border-radius:4px 4px 0 0;
+    }
+}
+.combo_option_scroll{overflow:overlay;position:relative;
+    // &::-webkit-scrollbar-thumb {
+    //     background: rgba(90, 90, 90,0);
+    //   }
+      
+    //   &::-webkit-scrollbar-track {
+    // background: rgba(0, 0, 0, 0);
+    // }
+    // ::-webkit-scrollbar-track {background-color: transparent;border-radius: rem(12);box-shadow: inset 0px 0px 5px transparent;}
+
+    
+}
+.combo_option_list{
+    > li{
+        &:last-of-type{}
+    }
+}
+
+
+.combo_option{
+    font-size:12px;color: #000000;display:block;padding:8px 10px;
+    &:hover{background:#f7f5ff;}
+    &.disabled{background:#f2f5f5;color:#adb3b3;cursor:default;}
+}
+
+
 .input_component_box{
     .ico_input{}
     .ico_input.ico_men{}
@@ -66,13 +132,22 @@ input.props_form{
 .map_guide_label_text{color: #5f637a;display:inline-block;line-height:1;font-size:13px;}
 
 .btn_box_obj{
-    &[class^='ico_']:before{}
+    display:inline-flex;padding: 0 10px; align-items: center; padding:10px;gap:4px;
+    border-radius: 8px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    &.has_ico:before{display:block;content:'';width:16px;height:16px;background-position:0 0;background-size:100% auto;background-repeat: no-repeat;}
     &.ico_loadmap{}
-    &.ico_loadmap:before{}
-    .btn_box_obj_text{}
+    &.ico_loadmap:before{background-image:url("../images/ic_road.png");}
+    .btn_box_obj_text{font-size: 12px; display:inline-block; position:relative;top:1px;
+        font-weight: 500;
+        line-height: 1;
+        color: #313444;}
+    &.active,
     &:hover{
-        &:before{}
-        .btn_box_obj_text{}
+        background-color:$primary;
+        &:before{background-position:0 100%;}
+        .btn_box_obj_text{color:#fff;}
     }
 }
 
@@ -180,11 +255,12 @@ input.props_form{
 .map_clabel_fxtext{font-size: 14px; line-height: 1; display:inline-block;color: #f0f0f0;}
 
 .hor_form_list{
+    display:flex;align-items:center;
     > li{
-        &.short{}
+        &.short{padding:0 5px;}
         &:last-of-type{}
     }
-    .short_else{}
+    .short_else{color:#d8d9e1;display:inline-block;font-size:12px;}
 }
 .time_picker_item{}
 .btn_formbox{
@@ -192,22 +268,51 @@ input.props_form{
     &.primary{background-color: $primary;color:#fff;}
 }
 .ui_picker_render{margin-top: -1px;}
-.map_summary_box{}
+.map_summary_box{
+    width: 240px;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+}
 .map_summary_row{
-    &:last-of-type{}
+    border-bottom:1px solid #dddddd;padding:0 0 10px 0;margin-bottom:10px;
+    &:last-of-type{margin-bottom:0;border-bottom:0;padding-bottom:0;}
 }
 .map_summary_tail_list{
+    display:table;width:100%;font-size: 14px;
     > li{
-        &:last-of-type{}
+        display:table-row;
+        &:last-of-type{
+            .map_summary_label_cols,
+            .map_summary_data_cols{padding-bottom:0;}
+        }
     }
 }
-.map_summary_label_cols{}
+.map_summary_label_cols,
+.map_summary_data_cols{display:table-cell;vertical-align: middle;padding-bottom:6px;}
+.map_summary_label_cols{width:1px;padding:0 10px 6px 0;}
 .map_summary_data_cols{}
-.map_summary_label{}
-.map_summary_data{}
-.map_summary_para{}
+.map_summary_label{
+    font-weight: 700; display:inline-block; white-space: nowrap;
+    line-height: 1;
+    color: #5f637a;}
+.map_summary_data{color: #5f637a;}
+.map_summary_para{font-size: 12px;
+    line-height: 1.33;
+    text-align: left;
+    color: #5f637a;}
 .map_summary_control_wrap{
+    margin-top:10px;
     .btn_box{}
+}
+.btn_map_summarybox{
+    display:block;text-align: center; color:#fff; font-size: 13px; line-height:1;
+    font-weight: 600;
+    padding: 9px 12px;
+    border-radius: 4px;
+    background-color: $primary;
 }
 
 .map_fold_row{}
