--- a/src/include/_head.html
+++ b/src/include/_head.html
@@ -8,7 +8,7 @@
 	<script src="./assets/js/dynamicListener.min.js"></script>
 	<script src="./assets/js/swiper.min.js"></script>
 	<script src="./assets/js/tui-date-picker.js"></script>
-	<script src="./assets/js/tui-time-picker.js"></script>
+	<!-- <script src="./assets/js/tui-time-picker.js"></script> -->
 	<script src="./assets/js/ui.js"></script>
 
 	<title></title>
