--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -7,17 +7,17 @@ html:not(.touchmode) {
 
 .front_body{
     &.center_form_body{
-        background:#f5f5f5 url("../images/bg_form_01.jpg") no-repeat 0 0;
+        background:#f5f5f5 url("../images/background@2x.jpg") no-repeat 0 0/100% auto;
         .page_wrap{
-            min-height:100vh;
-            background:url("../images/bg_form_02.jpg") no-repeat 100% 100%;
+            min-height:100vh; position:relative;
+            // background:url("../images/login_object2@2x.png") no-repeat 100% 100%/244px auto;;
             display:flex;align-items: center;justify-content: center;
         }
     }
     &.map_api_body{
        
     }
-    .page_wrap{display:flex;flex-direction: column;height:100vh;
+    .page_wrap{display:flex;flex-direction: column;min-height:100vh;
         > *{width:100%;box-sizing: border-box;}
     }
 }
