--- a/src/assets/scss/_contents.scss
+++ b/src/assets/scss/_contents.scss
@@ -248,7 +248,7 @@ input.props_form{
         &:after{display:none;}
     }
 }
-.map_bottom_wrap{}
+.map_bottom_wrap{box-shadow: 0 -4px 10px 0 rgba(6, 5, 39, 0.1);}
 .map_control_row{background:#252031;display:flex;height:60px;}
 .map_control_label_cols{flex:0 0 220px;background:#2f264e;display:flex;align-items: center;justify-content: center;}
 .map_control_form_cols{flex:1; min-width:0; padding:10px 30px; display:flex;align-items: center;}
@@ -287,7 +287,9 @@ input.props_form{
 .time_picker_item{}
 .btn_formbox{
     min-width: 70px;padding: 8px 12px; box-sizing: border-box;border-radius: 4px;display:inline-block; font-size:13px;font-weight:600;text-align:center; line-height:1;
-    &.primary{background-color: $primary;color:#fff;}
+    &.primary{background-color: $primary;color:#fff;
+        &:hover{background-color: $primary_hover;}
+    }
 }
 .ui_picker_render{margin-top: -1px;}
 .map_summary_box{
@@ -340,39 +342,76 @@ input.props_form{
 .map_fold_row{}
 .map_fold_control_row{}
 .btn_map_fold_control{
-    &:after{}
-    &.active{
-        &:after{}
+    display:block;width:70px;height:20px;border: solid 1px #ddd; border-radius:7px 7px 0 0;position:absolute;top:0;left:50%;transform: translateX(-50%)translateY(-100%);
+  background-color: #f5f5f5; box-shadow:0 1px 10px 0 rgba(6, 5, 39, 0.1);
+    &:after{display:block;content:'';width:7px;height:7px;border-right:2px solid #494c5a;border-bottom:2px solid #494c5a;transform:rotate(225deg);transition:.5s; position:absolute;top:50%;left:50%;margin:-1px 0 0 -5px}
+    &:before{display:block;content:'';position:absolute;bottom:-2px;height:5px;background:#fff;width:100%;}
+    &.fold{
+        &:after{transform:rotate(45deg);margin-top:-6px;}
     }
 }
-.map_fold_content_row{display:none;}
-.map_fold_content{}
-
-.map_fold_title_row{}
-.map_fold_title_cols{
-    &:last-of-type{}
+.map_fold_content_row{position:relative;overflow:hidden;background:#fff;transition:.5s;height:2px;}
+.map_fold_content{padding:30px 40px;
+    &.active{display:block;}
 }
-.map_fold_data_title{}
+
+.map_fold_title_row{display:flex;align-items:flex-end;padding-bottom:20px;border-bottom:1px solid #ddd;  }
+.map_fold_title_cols{
+    padding-left:25px;position:relative;
+    &:before{display:block;content:'';width:1px;height:12px;background:#d9d9d9;position:absolute;top:2px;left:12px;}
+    &:first-of-type{
+        padding-left:0;
+        &:before{display:none;}
+    }
+}
+.map_fold_data_title{font-size: 18px;
+    font-weight: 700;
+    line-height: 1;
+    color: #313444;}
 .map_caption_dl{
+    display:flex;font-size: 14px;
     dt,
     dd{}
     dt{}
     dd{}
 }
-.map_caption_label{}
-.map_caption_value{}
+.map_caption_label{display:inline-block;margin-right:10px;
+    font-weight: 700;
+    line-height: 1;
+    color: #5f637a;}
+.map_caption_value{color: #5f637a;}
 
+.map_fold_data_render_row{margin:30px 0 0;}
 
-.chart_title_flex_wrap{}
-.chart_title_flex_cols{}
-.chart_map_title{}
-.chart_content_flex_wrap{}
-.chart_content_flex_cols{}
-.nodata_guide_wrap{
-    &:before{}
+.chart_title_flex_wrap{display:flex;gap:20px;margin-bottom:10px;}
+.chart_title_flex_cols{flex:1; min-width: 0;display:flex;justify-content: space-between;}
+.chart_map_title{font-size: 16px;
+    font-weight: 700;
+    line-height: 1;
+    text-align: left;
+    color: #313444;
+    &.type2{
+        position:relative;padding-left:10px;
+        &:before{display:block;content:'';width:4px;height:4px;background:#313444; border-radius:100%;position:absolute;top:6px;left:0;}
+    }
 }
-.nodata_guide{}
-.chart_content_render{}
+.chart_content_flex_wrap{display:flex;gap:20px;}
+.chart_content_flex_cols{flex:1; min-width: 0;}
+.nodata_guide_wrap{
+    background:#f5f5f5; border-radius: 8px; position:relative;overflow:hidden; min-height:260px;box-sizing: border-box;padding:20px;display:flex;;align-items: center;justify-content: center;flex-direction:column;
+    &:before{display:block;content:'';height:64px;width:64px;margin:0 auto 8px;background:url("../images/ic_data_no@2x.png") no-repeat 0 0/100% auto;}
+}
+.nodata_guide{color: #5f637a;font-size:14px;}
+.chart_content_render{background:#f5f5f5; border-radius: 8px; position:relative;overflow:hidden; }
+.chart_dot_guide_list{
+    display:flex;gap:10px;
+    > li{
+        
+    }
+}
+.chart_dot_guide_item{display:flex;align-items: center;gap:4px;}
+.chart_dot_guide_box{border-radius:100%;width:8px;height:8px;display:inline-block;}
+.chart_dot_guide_text{font-size:14px;color:#626888;}
 
 
 /* center form */
