스킨3진행중

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -121,11 +121,15 @@ html:not(.touchmode) {
 .footer_wrap{}
 
 .map_render_wrap{flex:1; min-height:0;position:relative;background:#ddd;}
+.map_screen_wrap{flex:1; min-height:0;position:relative;display:flex;flex-direction: column;}
 
 .map_bottom_wrap{flex:0 0 60px; position:relative;}
 
-.map_screen_wrap{}
-.map_screen_title_row{}
+.map_screen_title_row{
+  flex:0 0 100px; position:relative; display:flex; justify-content: space-between; width:100%;
+  background:url("../images/top_bg@2x.jpg") repeat-y 0 0/100% auto;
+  &:after{display:block;content:'';position:absolute;bottom:0;left:0;width:100%;background:#fff;border-radius:15px 15px 0 0;height:24px;}
+}
 .map_screen_title_main_cols{}
 .map_screen_title_sub_cols{}
 .map_screen_title{}
@@ -138,7 +142,7 @@ html:not(.touchmode) {
 .btn_map_screen_list > li{}
 .btn_map_screen_list > li:last-of-type{}
 
-.map_screen_content_row{}
+.map_screen_content_row{flex:1;}
 
 
 
